--- a/styles.qss
+++ b/styles.qss
@@ -34,6 +34,14 @@ QLabel#item-name {
     font-family: 'Roboto Regular';
 }
 
+QLabel#item-expiry-label {
+
+}
+
+QLabel#item-remaining-days-label {
+    
+}
+
 QFrame#nav-bar {
     border-top: 1px solid black;
 }
