--- a/styles.qss
+++ b/styles.qss
@@ -46,15 +46,17 @@ QLabel#item-remaining-days-label {
 
 QFrame#nav-bar {
     border-top: 1px solid black;
+    background-color: #abd1c6;
 }
 
 QFrame#nav-button {
     Font-family: 'Montserrat';
+    Font-size: 20px;
 }
 
 QFrame#nav-button:hover {
     font-weight: bold;
-    background-color: red
+    background-color: red;
 }
 
 QFrame#item {
@@ -64,4 +66,5 @@ QFrame#item {
 
 QScrollArea {
     background-color: #F5F5DC
+    
 }
